--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,43 @@
-# .NET Core build folders
+## .NET Core
 bin/
 obj/
+out/
+publish/
 
-# Visual Studio files
+## Visual Studio files
 .vs/
 *.user
 *.userosscache
 *.sln.docstates
 
-# Build results
+## Build results
 [Dd]ebug/
-[Dd]ebugPublic/
 [Rr]elease/
-[Rr]eleases/
 x64/
 x86/
-build/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
 bld/
 [Bb]in/
 [Oo]bj/
-[Oo]ut/
-msbuild.log
-msbuild.err
-msbuild.wrn
+[Ll]og/
+[Ll]ogs/
 
-# Visual Studio Code
-.vscode/
+## Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
-# User-specific files
-*.rsuser
-*.suo
-*.user
-*.userosscache
-*.sln.docstates
-
-# Environment Files
-appsettings.Development.json
+## Environment files
 *.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+appsettings.Development.json
 
-# Logs
-logs/
-*.log
-npm-debug.log*
+## Other
+*.swp
+*.swo
+*.*~
+project.lock.json
+.DS_Store
+*.pyc
